; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_backend_data.c_TotalProcCount.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_backend_data.c_TotalProcCount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MaxConnections = common dso_local global i32 0, align 4
@autovacuum_max_workers = common dso_local global i32 0, align 4
@max_worker_processes = common dso_local global i32 0, align 4
@NUM_AUXILIARY_PROCS = common dso_local global i32 0, align 4
@max_prepared_xacts = common dso_local global i32 0, align 4
@max_wal_senders = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TotalProcCount() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  store i32 0, i32* %2, align 4
  %3 = load i32, i32* @MaxConnections, align 4
  %4 = load i32, i32* @autovacuum_max_workers, align 4
  %5 = add nsw i32 %3, %4
  %6 = add nsw i32 %5, 1
  %7 = load i32, i32* @max_worker_processes, align 4
  %8 = add nsw i32 %6, %7
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* @NUM_AUXILIARY_PROCS, align 4
  %11 = add nsw i32 %9, %10
  %12 = load i32, i32* @max_prepared_xacts, align 4
  %13 = add nsw i32 %11, %12
  store i32 %13, i32* %2, align 4
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
